[build-system]
requires = ["scikit-build-core", "cython >=3.0", "scoring-matrices ~=0.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pytantan"
version = "0.1.2"
description = "Cython bindings and Python interface to Tantan, a fast method for identifying repeats in DNA and protein sequences."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
# platform = "posix"
keywords = ["bioinformatics", "sequence", "repeats", "masking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "archspec ~=0.2 ; os_name != 'nt'",
    "scoring-matrices ~=0.2.0",
]

[project.urls]
"Documentation" = "https://pytantan.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/althonos/pytantan/issues"
"Changelog" = "https://github.com/althonos/pytantan/blob/main/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/althonos/pytantan/"
"Builds" = "https://github.com/althonos/pytantan/actions"
"PyPI" = "https://pypi.org/project/pytantan"

[project.optional-dependencies]
test = ["importlib-resources ; python_version < '3.9'"]

[tool.scikit-build]
build-dir = "build/{build_type}"
editable.rebuild = true
editable.verbose = false

[[tool.scikit-build.generate]]
path = "src/pytantan/_version.py"
template = '__version__ = "${version}"'
location = 'source'

[[tool.scikit-build.overrides]]
if.state = "editable"
cmake.build-type = "Debug"

[[tool.scikit-build-overrides]]
if.env.SCCACHE = true
cmake.define.CMAKE_C_COMPILER_LAUNCHER = "sccache"
cmake.define.CMAKE_CXX_COMPILER_LAUNCHER = "sccache"

[[tool.scikit-build-overrides]]
if.env.MOLD = true
cmake.define.CMAKE_LINKER_TYPE = "mold"

[tool.coverage.run]
plugins = ["Cython.Coverage"]

[tool.coverage.report]
include = ["src/pytantan/*"]
omit = ["src/pytantan/tests/*"]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise UnexpectedError",
    "raise AllocationError",
]

[tool.coverage.paths]
source = [
    "src/pytantan/",
    "build/Debug/src/pytantan/",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests/.*\\.py"]

["tool.mypy-pytantan.tests.*"]
ignore_errors = true
