[metadata]
name = pytantan
version = attr: pytantan._version.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/pytantan
description = Cython bindings and Python interface to Tantan, a fast method for identifying repeats in DNA and protein sequences.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
platform = any
keywords = bioinformatics, sequence, repeats, masking
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed
project_urls =
    Documentation = https://pytantan.readthedocs.io/en/stable/
    Bug Tracker = https://github.com/althonos/pytantan/issues
    Changelog = https://github.com/althonos/pytantan/blob/main/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/pytantan/
    Builds = https://github.com/althonos/pytantan/actions
    PyPI = https://pypi.org/project/pytantan

[options]
zip_safe = false
packages = pytantan, pytantan.tests, pytantan.tests.data, pytantan.platform
include_package_data = true
python_requires = >=3.5
setup_requires =
    setuptools >=46.4
    cython ~=3.0
install_requires =
    archspec ~=0.2      ; os_name != 'nt'
tests_require =
    importlib-resources ; python_version < '3.7'

[options.package_data]
pytantan = py.typed, *.pyi, *.pxd, *.h
pytantan.tests = requirements.txt
pytantan.tests.data = *

[build_matrices]
matrices = 
    BLOSUM100
    BLOSUM90
    BLOSUM85
    BLOSUM80
    BLOSUM75
    BLOSUM70
    BLOSUM65
    BLOSUM62
    BLOSUM60
    BLOSUM55
    BLOSUM50
    BLOSUM45
    BLOSUM40
    BLOSUM35
    BLOSUM30

[coverage:run]
plugins = Cython.Coverage
include = pytantan/*.py, pytantan/lib.pyx

[coverage:report]
include = pytantan/*
omit = pytantan/tests/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise MemoryError()

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
exclude = pytantan/tests/*

[mypy-pytantan.tests]
disallow_untyped_defs = false

[isort]
known_first_party = pytantan, tantan
known_standard_library = cpython, cython, _unicode
known_third_party = libc, libcpp
line_length = 88
profile = black
skip_gitignore = true
skip_glob = vendor/tantan/*
